examples/negative/invalid_condition.nv
fn main() : void {
    if (1) {
        print_str("1 is not bool");
    }
    return;
}
